@@ -31,31 +31,32 @@ targ_underscore=no
 
 targ_cpu=`echo $targ | sed 's/^\([^-]*\)-\([^-]*\)-\(.*\)$/\1/'`
 case "${targ_cpu}" in
-alpha*) targ_archs=bfd_alpha_arch ;;
-arm*)	targ_archs=bfd_arm_arch ;;
-strongarm*) targ_archs=bfd_arm_arch ;;
-thumb*)	targ_archs=bfd_arm_arch ;;
-xscale*) targ_archs=bfd_arm_arch ;;
-c30*)	targ_archs=bfd_tic30_arch ;;
-c54x*)	targ_archs=bfd_tic54x_arch ;;
-hppa*)	targ_archs=bfd_hppa_arch ;;
-x86_64) targ_archs=bfd_i386_arch ;;
-i[3456]86) targ_archs=bfd_i386_arch ;;
-i370)   targ_archs=bfd_i370_arch ;;
+alpha*)          targ_archs=bfd_alpha_arch ;;
+arm*)	         targ_archs=bfd_arm_arch ;;
+c30*)	         targ_archs=bfd_tic30_arch ;;
+c54x*)	         targ_archs=bfd_tic54x_arch ;;
+hppa*)	         targ_archs=bfd_hppa_arch ;;
+i[3456]86)       targ_archs=bfd_i386_arch ;;
+i370)            targ_archs=bfd_i370_arch ;;
 m6811*|m68hc11*) targ_archs="bfd_m68hc11_arch bfd_m68hc12_arch" ;;
 m6812*|m68hc12*) targ_archs="bfd_m68hc12_arch bfd_m68hc11_arch" ;;
-m68*)	targ_archs=bfd_m68k_arch ;;
-m88*)	targ_archs=bfd_m88k_arch ;;
-mips*)	targ_archs=bfd_mips_arch ;;
-pdp11*)	targ_archs=bfd_pdp11_arch ;;
-pj*)	targ_archs="bfd_pj_arch bfd_i386_arch";;
-powerpc*) targ_archs="bfd_rs6000_arch bfd_powerpc_arch" ;;
-s390*)  targ_archs=bfd_s390_arch ;;
-rs6000)	targ_archs="bfd_rs6000_arch bfd_powerpc_arch" ;;
-sparc*) targ_archs=bfd_sparc_arch ;;
-v850*)	targ_archs=bfd_v850_arch ;;
-z8k*)	targ_archs=bfd_z8k_arch ;;
-*)	targ_archs=bfd_${targ_cpu}_arch ;;
+m68*)	         targ_archs=bfd_m68k_arch ;;
+m88*)	         targ_archs=bfd_m88k_arch ;;
+mips*)	         targ_archs=bfd_mips_arch ;;
+pdp11*)	         targ_archs=bfd_pdp11_arch ;;
+pj*)	         targ_archs="bfd_pj_arch bfd_i386_arch";;
+powerpc*)        targ_archs="bfd_rs6000_arch bfd_powerpc_arch" ;;
+rs6000)	         targ_archs="bfd_rs6000_arch bfd_powerpc_arch" ;;
+s390*)           targ_archs=bfd_s390_arch ;;
+sh*)             targ_archs=bfd_sh_arch ;;
+sparc*)          targ_archs=bfd_sparc_arch ;;
+strongarm*)      targ_archs=bfd_arm_arch ;;
+thumb*)	         targ_archs=bfd_arm_arch ;;
+v850*)	         targ_archs=bfd_v850_arch ;;
+x86_64)          targ_archs=bfd_i386_arch ;;
+xscale*)         targ_archs=bfd_arm_arch ;;
+z8k*)	         targ_archs=bfd_z8k_arch ;;
+*)	         targ_archs=bfd_${targ_cpu}_arch ;;
 esac
 
 
@@ -813,6 +814,12 @@ case "${targ}" in
   sh-*-linux*)
     targ_defvec=bfd_elf32_shblin_vec
     targ_selvecs=bfd_elf32_shlin_vec
+    ;;
+  sh*eb-*-linux*)
+    targ_defvec=bfd_elf32_shblin_vec
+    ;;
+  sh*-*-linux*)
+    targ_defvec=bfd_elf32_shlin_vec
     ;;
 
   sh-*-elf* | sh-*-rtemself*)
