@@ -394,7 +394,8 @@ changequote([,])dnl
       s390x-*-linux-gnu*)   fmt=elf em=linux ;;
       s390-*-linux-gnu*)    fmt=elf em=linux ;;
 
-      sh-*-linux*)	    fmt=elf em=linux ;;
+      sh*eb-*-linux*)	    fmt=elf em=linux endian=big ;;
+      sh*-*-linux*)	    fmt=elf em=linux endian=little ;;
       sh-*-elf*)	    fmt=elf ;;
       sh-*-coff*)           fmt=coff bfd_gas=yes;;
       sh-*-pe*)             fmt=coff em=pe bfd_gas=yes endian=little ;;
