@@ -231,6 +231,13 @@ h8500-*-hms* | h8500-*-coff*)
 sh-*-linux*)
 			targ_emul=shelf_linux
 			targ_extra_emuls=shlelf_linux
+			targ_extra_libpath=shelf_linux
+			;;
+sh*eb-*-linux*)
+			targ_emul=shelf_linux
+			;;
+sh*-*-linux*)
+			targ_emul=shlelf_linux
 			;;
 sh-*-elf* | sh-*-rtemself*)
 			targ_emul=shelf
